Fehlermeldungen EN - Markets

--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -263,7 +263,7 @@ a| Select whether <<Processing returns, eBay returns>> should be retrieved or no
 | Select whether an incoming payment is booked for orders of the type *credit note* when an eBay Payments order is successfully refunded.
 
 | *Order status for orders with failed refunds*
-| Select a status. If no refund could be issued, then the order is moved to this status. If necessary, create a xref:orders:managing-orders.adoc#1230[new status]. +
+| Select a status. If no refund could be issued, then the order is moved to this status. If necessary, create a xref:orders:managing-orders.adoc#create-status[new status]. +
 
 *_Background:_* The event procedure <<#8300, Issue eBay refund to customer>> initiates a refund for an order. If the event procedure cannot be completed, the order is moved to the status that you selected for the setting *Order status for orders with failed refunds*.
 
@@ -370,7 +370,7 @@ Linking return statuses:
 . Go to *Setup » Markets » eBay » Settings » Tab: Return settings*.
 . Click on the *Return status links* tab.
 . Select a plentymarkets return status for each *eBay return status* from the drop-down lists. +
-→ You can select an already existing status or you can xref:orders:managing-orders.adoc#1220[create] a new status that best suits your workflow.
+→ You can select an already existing status or you can xref:orders:managing-orders.adoc#create-status[create] a new status that best suits your workflow.
 . Save (terra:save[]) the settings.
 
 For further information about editing eBay returns and using event procedures for partial automation, refer to the <<Processing returns, Processing returns>> chapter.
@@ -2124,7 +2124,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 include::_includes:partial$event-procedure.adoc[]
 
-*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
+*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#create-status[create] a new status.
 
 [[event-procedure-accepting-returns]]
 .Event procedure for automatically accepting returns with eBay label
@@ -2164,7 +2164,7 @@ Returns with your own label are only available for your customers on ebay.de, eb
 
 include::_includes:partial$event-procedure.adoc[]
 
-*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
+*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#create-status[create] a new status.
 
 [[event-procedure-return-own-label]]
 .Event procedure for automatically accepting returns with your own label
@@ -2204,7 +2204,7 @@ Only reject those returns that violate the terms specified in the *Setup » Mark
 
 include::_includes:partial$event-procedure.adoc[]
 
-*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
+*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#create-status[create] a new status.
 
 [[event-procedure-rejecting-returns]]
 .Event procedure for automatically rejecting returns
@@ -2238,7 +2238,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to offer your 
 
 include::_includes:partial$event-procedure.adoc[]
 
-*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
+*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#create-status[create] a new status.
 
 [[event-procedure-partial-refund]]
 .Event procedure for automatically offering partial refunds
@@ -2278,7 +2278,7 @@ You can upload a return label with an event procedure at eBay as described below
 
 include::_includes:partial$event-procedure.adoc[]
 
-*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
+*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#create-status[create] a new status.
 
 [[event-procedure-own-label]]
 .Event procedure for uploading your own label
@@ -2312,7 +2312,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to inform eBay
 
 include::_includes:partial$event-procedure.adoc[]
 
-*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
+*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#create-status[create] a new status.
 
 [[event-procedure-mark-return]]
 .Event procedure for automatically marking returns as received
@@ -2365,7 +2365,7 @@ The event procedure can be triggered in three different cases if you use eBay Ma
 
 include::_includes:partial$event-procedure.adoc[]
 
-*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
+*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#create-status[create] a new status.
 
 [[event-procedure-automatic-refund]]
 .Event procedure for automatically initiating refunds via PayPal
@@ -2404,7 +2404,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to inform eBay
 
 include::_includes:partial$event-procedure.adoc[]
 
-*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status.
+*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#create-status[create] a new status.
 
 [[event-procedure-sent-refunds]]
 .Event procedure for automatically marking refunds as sent (non-PayPal)
