--- a/docs/en-gb/modules/markets/pages/best-practice-limango-partial-delivery.adoc
+++ b/docs/en-gb/modules/markets/pages/best-practice-limango-partial-delivery.adoc
@@ -37,7 +37,7 @@ Now set up an xref:automation:event-procedures.adoc#[event procedure] to inform 
 
 include::_includes:partial$event-procedure.adoc[]
 
-*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#1220[create] a new status. +
+*_Note:_* The status in the event procedure below was selected as an example. Select the status that best suits your workflow. To do so, select an already existing status or xref:orders:managing-orders.adoc#create-status[create] a new status. +
 Note that all order items contained in main orders will also be marked as shipped if you use the recommended events and filters.
 
 [[event-procedure-partial-delivery-limango]]
@@ -48,7 +48,7 @@ Note that all order items contained in main orders will also be marked as shippe
 
 | *Event*
 | *Order change: Outgoing items booked*
-| 
+|
 
 | *Filter 1*
 | *Order > Referrer*
