Number of filters in catalogue - now excludes template filters - DE+EN

--- a/docs/de-de/modules/daten/partials/catalogue-menu.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-menu.adoc
@@ -82,7 +82,7 @@ endif::file-export[]
 | Setze Filter, um nur bestimmte Datensätze zu exportieren. +
 *_Hinweis:_* Filter sind noch nicht für alle Kataloge verfügbar.
 
-*_Tipp:_* In der Navigation kannst du jederzeit sehen, wie viele Filter für den Katalog aktiv sind. Die Template-Filter werden mitgezählt.
+*_Tipp:_* In der Navigation kannst du jederzeit sehen, wie viele Filter du für den Katalog aktiviert hast. Template-Filter, also Filter, die automatisch aktiviert sind, werden _nicht_ mitgezählt.
 
 image:daten:filters-number-of-filters.png[]
 
