--- a/docs/en-gb/modules/markets/partials/checklist-variations.adoc
+++ b/docs/en-gb/modules/markets/partials/checklist-variations.adoc
@@ -259,7 +259,7 @@ Checking filters:
 
 . Go to *Data » Catalogues » [Open catalogue]*. +
 . On the left in the side navigation, click on the view *Filters* (material:filter_alt[]). +
-*_Tip:_* The number next to the word *Filter* shows how many filters have been set. The template filters are included in this number. +
+*_Tip:_* The number next to the word *Filter* shows how many filters you have set. The template filters are _not_ included in this number. +
 → The filter overview opens. +
 . Check the logic of the filters.
 . If necessary, remove one or more filters.
