--- a/docs/de-de/modules/maerkte/partials/checklist-variations.adoc
+++ b/docs/de-de/modules/maerkte/partials/checklist-variations.adoc
@@ -259,7 +259,7 @@ Filter prüfen:
 
 . Öffne das Menü *Daten » Kataloge » [Katalog öffnen]*. +
 . Klicke links in der Seitennavigation auf das Tab *Filter* (material:filter_alt[]). +
-*_Tipp:_* Die Zahl neben dem Wort *Filter* zeigt an, wie viele Filter aktiv sind. Die Template-Filter werden mitgezählt. +
+*_Tipp:_* Die Zahl neben dem Wort *Filter* zeigt an, wie viele Filter du aktiviert hast. Die Template-Filter werden _nicht_ mitgezählt. +
 → Die Filter-Übersicht wird geöffnet. +
 . Prüfe die Logik der Filter.
 . Entferne bei Bedarf einen oder mehrere Filter.
