--- a/docs/de-de/modules/externe-webshops/pages/woocommerce.adoc
+++ b/docs/de-de/modules/externe-webshops/pages/woocommerce.adoc
@@ -81,7 +81,7 @@ Verbindung zu WooCommerce-API herstellen:
 . Klicke auf *Verbindung testen*.
 . Speichere die Einstellungen. +
 → Dein Plugin ist mit der WooCommerce-API verbunden. +
-*_Wichtig:_* Wenn du den WooCommerce-Webshop im Nachhinein änderst, musst du einen neuen Mandanten wählen, der bisher noch nicht mit einem WoCommerce-Webshop verbunden war. Sonst werden Aufträgen, die über die neue Verbindung importiert werden, möglicherweise Kund:innendaten der alten Verbindung zugeordnet.
+*_Wichtig:_* Wenn du den WooCommerce-Webshop im Nachhinein änderst, musst du einen neuen Mandanten wählen. Wähle unbedingt einen Mandanten, der bisher noch nicht mit einem WoCommerce-Webshop verbunden war. Sonst werden Aufträgen, die über die neue Verbindung importiert werden, möglicherweise Kund:innendaten der alten Verbindung zugeordnet.
 
 [additional-shops]
 === _Optional:_ Weitere WooCommerce-Webshops verbinden
