--- a/docs/de-de/modules/maerkte/partials/auftragsherkunft-aktivieren.adoc
+++ b/docs/de-de/modules/maerkte/partials/auftragsherkunft-aktivieren.adoc
@@ -19,7 +19,8 @@ ifdef::idealo-direkt[]
 . *_Optional:_* Wenn du idealo Direktkauf nutzen möchtest, aktiviere die Auftragsherkunft *idealo Direktkauf* mit der ID *121.02*. +
 → Wenn du die Auftragsherkunft *idealo Direktkauf* aktivierst, wird in der über den elastischen Export erzeugten CSV-Datei die Spalte *checkout_approved* auf *true* gesetzt.
 endif::idealo-direkt[]
-. Speichere (terra:save[]) die Einstellungen.
+. Speichere (terra:save[]) die Einstellungen. +
+ifdef::woocommerce[→ Das Menü *Einrichtung » Märkte » WooCommerce* wird wählbar.]
 
 ////
 :market: xxxx
