fix table on working-with-orders page

--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -25,7 +25,7 @@ Using group functions:
 
 . Go to *Orders » Orders (Test phase)*.
 . Carry out the search (material:search[]) to display orders.
-. Select (material:done[]) all orders for which you want to carry out a certain action at once.
+. Select (material:check_box[role=skyBlue]) all orders for which you want to carry out a certain action at once.
 . Select one of the available group functions. Pay attention to the explanations given in <<table-order-group-functions>>.
 
 [TIP]
@@ -58,7 +58,7 @@ In the editing mode (terra:design_inline_edit[role="darkGrey"]) of the order ove
 |material:delete[]
 |Deletes all selected orders.
 
-2+^| *Context menu* (material:more_vert[])
+3+^| *Context menu* (material:more_vert[])
 | *Reverse outgoing items*
 |material:book[]
 |Reverses the outgoing items of all selected orders.
