--- a/docs/de-de/modules/externe-webshops/pages/woocommerce.adoc
+++ b/docs/de-de/modules/externe-webshops/pages/woocommerce.adoc
@@ -273,7 +273,8 @@ Folgende Daten werden importiert:
 * *Regulärer Preis* als *Verkaufspreis* +
 → Ein Verkaufspreis für die Auftragsherkunft WooCommerce wird erstellt, falls keiner existiert.
 * *Angebotspreis* als *Aktionspreis*
-* *Gewicht* als *Gewicht Brutto* *Maße* als *Maße*
+* *Gewicht* als *Gewicht Brutto*
+* *Maße* als *Maße*
 * *Produkt Bilder*
 * *Varianten verknüpftes Bild* als *Varianten verknüpftes Bild*
 * *Attribute * Sichtbar auf der Produktseite* als *Eigenschaften*
