--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -722,6 +722,8 @@
 
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
+* xref:changelog:october-2022.adoc[Changelogs Oktober 2022]
+** xref:changelog:2022-10-05.adoc[Changelog 05. Oktober 2022]
 * xref:changelog:september-2022.adoc[Changelogs September 2022]
 ** xref:changelog:2022-09-28.adoc[Changelog 28. September 2022]
 ** xref:changelog:2022-09-21.adoc[Changelog 21. September 2022]
