--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -1049,7 +1049,7 @@ You can use various filters to retrieve specific information about your contact'
 [#messenger]
 === Messenger
 
-In the *Messenger* area, you can see all messages that belong to the contact. You can xref:crm:messenger-testphase.adoc#intable-whisper-mode[whisper] messages so that they are only internally visible and _not_ for your customers. You can xref:crm:messenger-testphase.adoc#create-message[send] messages and you can xref:crm:messenger-testphase.adoc#capture-minutes[capture minutes for the message] and save these minutes as free minutes or paid minutes. 
+In the *Messenger* area, you can see all messages that belong to the contact. You can <<#whisper-message, whisper>> messages so that they are only internally visible and _not_ for your customers. You can <<#send-message, send>> messages and you can <<#message-capture-minutes, capture minutes for the message>> and save these minutes as free minutes or paid minutes. 
 
 Click on the already created message to open the conversation in the messenger. You can carry out further settings there. For further information, refer to the xref:crm:messenger-testphase.adoc#[Messenger (Test phase)] page.
 
