ADD more work to the new ui multipack page

--- a/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
+++ b/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
@@ -49,7 +49,7 @@ Zum Beispiel können sie das Bartpflege-Kit nicht ohne das Bartwachs kaufen.
 * Es ist möglich, Varianten mit unterschiedlichen Steuersätzen zusammen in einem Paket anzubieten.
 * Alle Bestandteile müssen auf dem selben Lager liegen.
 * Der Warenbestand des Pakets richtet sich nach dem Bestandteil mit dem geringsten Bestand.
-Am Paketartikel selbst pflegst du keinen Bestand.
+Am Paket selbst pflegst du keinen Bestand.
 |Standard
 
 |
