--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -429,6 +429,93 @@ Andere Adresse zuweisen:
 * Rechnungsadresse: *E-Mail-Adresse* und *Telefonnummer*
 * Lieferadresse: alle Felder außer *Umsatzsteuernummer* und *Land*
 
+[#area-messenger]
+=== Bereich: Messenger
+
+Im Bereich *Messenger* siehst du alle zum Auftrag gehörigen Nachrichten. Du kannst Nachrichten <<#nachricht-fluestern, flüstern>>, sodass sie nur intern sichtbar sind und _nicht_ für deine Kund:innen. Du kannst Nachrichten <<#nachricht-senden, senden>> und du kannst <<#nachricht-minuten-erfassen, Minuten für die Nachricht erfassen>> und diese Minuten als Freiminuten oder bezahlte Minuten speichern. 
+
+Mit einem Klick auf die bereits erstellte Nachricht wird die Konversation im Messenger geöffnet. Dort kannst du weitere Einstellungen vornehmen. Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger (Testphase)].
+
+[#nachricht-fluestern]
+==== Nachricht flüstern
+
+Gehe wie im Folgenden beschrieben vor, um eine Nachricht zu flüstern.
+
+[.instruction]
+Nachricht flüstern:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Auftrag, für den du eine Nachricht flüstern möchtest.
+. Klicke auf der linken Seite auf *Messenger*.
+. Klicke auf *Neue Nachricht* (material:add[]). +
+→ Der Messenger wird geöffnet.
+. Wähle einen oder mehrere Empfänger:innen. +
+*_Hinweis:_* Die ID des Auftrags ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
+. Gib bei Bedarf weitere Empfänger:innen ein.
+. Gib einen Betreff ein.
+. Gib den Text ins Textfeld ein. +
+→ Mit einem Doppelklick auf das Wort stehen dir Formatierungsmöglichkeiten für deine Nachricht zur Verfügung.
+. Füge optional mit einem Klick auf material:attach_file[] *Anhänge hinzufügen* eine Datei an.
+. Klicke auf material:visibility_off[] *FLÜSTERN*, um die Nachricht zu flüstern. 
+
+[#nachricht-senden]
+==== Nachricht senden
+
+Gehe wie im Folgenden beschrieben vor, um eine Nachricht zu senden.
+
+[.instruction]
+Nachricht senden:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Auftrag, für den du eine Nachricht senden möchtest.
+. Klicke auf der linken Seite auf *Messenger*.
+. Klicke auf *Neue Nachricht* (material:add[]). +
+→ Der Messenger wird geöffnet.
+. Wähle einen oder mehrere Empfänger:innen. +
+*_Hinweis:_* Die ID des Auftrags ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
+. Gib bei Bedarf weitere Empfänger:innen ein.
+. Gib einen Betreff ein.
+. Gib den Text ins Textfeld ein. +
+→ Mit einem Doppelklick auf das Wort stehen dir Formatierungsmöglichkeiten für deine Nachricht zur Verfügung.
+. Füge optional mit einem Klick auf material:attach_file[] *Anhänge hinzufügen* eine Datei an.
+. Klicke auf material:visibility_off[] *Flüster-Modus*, um den Flüster-Modus auszuschalten. +
+*_Hinweis:_* Die Schaltfläche ändert sich von material:visibility_off[] *FLÜSTERN* in material:forward_to_inbox[role=skyBlue] *SENDEN*. 
+. Klicke auf material:forward_to_inbox[role=skyBlue] *SENDEN*, um die Nachricht zu senden. 
+
+[#nachricht-minuten-erfassen]
+==== Minuten für die Nachricht erfassen
+
+Gehe wie im Folgenden beschrieben vor, um Minuten für die Nachricht zu erfassen. Du kannst dann entscheiden, ob es sich bei diesen Minuten um Freiminuten oder bezahlte Minuten handelt.
+
+Das Erfassen von Minuten ist nur bei geflüsterten Nachrichten möglich.
+
+[.instruction]
+Minuten für die Nachricht erfassen:
+
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Auftrag, für den du eine Nachricht mit erfassten Minuten erstellen möchtest.
+. Klicke auf der linken Seite auf *Messenger*.
+. Klicke auf *Neue Nachricht* (material:add[]). +
+→ Der Messenger wird geöffnet.
+. Wähle einen oder mehrere Empfänger:innen. +
+*_Hinweis:_* Die ID des Auftrags ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
+. Gib bei Bedarf weitere Empfänger:innen ein.
+. Gib einen Betreff ein.
+. Gib den Text ins Textfeld ein. +
+→ Mit einem Doppelklick auf das Wort stehen dir Formatierungsmöglichkeiten für deine Nachricht zur Verfügung.
+. Füge optional mit einem Klick auf material:attach_file[] *Anhänge hinzufügen* eine Datei an.
+. Klicke auf material:more_vert[] und aktiviere (material:toggle_on[role=skyBlue]) dann die Option *Minuten erfassen*. +
+*_Hinweis:_* Die Schaltfläche ändert sich in material:visibility_off[role=skyBlue] *MINUTEN ERFASSEN*. 
+. Klicke auf material:visibility_off[role=skyBlue] *MINUTEN ERFASSEN*, um die Minuten für die Nachricht zu erfassen. +
+→ Das Fenster *Minuten erfassen* wird geöffnet.
+. Passe ggf. die Minuten an.
+. Wähle (material:radio_button_checked[role=skyBlue]), ob es sich um *Freiminuten* oder *Bezahlte Minuten* handelt.
+. Weise der Nachricht ggf. Tags zu. 
+. Klicke auf *ERFASSEN UND SPEICHERN*.
+
 [#area-order-items]
 === Bereich: Auftragspositionen
 
