fix icon and add messenger link to list on orders page

--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -510,7 +510,7 @@ Capturing minutes for the message:
 . Click on material:attach_file[] *Add attachments* to add a file, if needed.
 . Click on material:more_vert[] and then activate (material:toggle_on[role=skyBlue]) the option *Capture minutes*. +
 *_Note:_* The button changes to material:visibility_off[role=skyBlue] *CAPTURE MINUTES*.
-. Click on material:visbility_off[role=skyBlue] *CAPTURE MINUTES* to capture the minutes for the message. +
+. Click on material:visibility_off[role=skyBlue] *CAPTURE MINUTES* to capture the minutes for the message. +
 → The *Capture minutes* window opens.
 . Adjust the minutes, if necessary.
 . Select (material:radio_button_checked[role=skyBlue]) whether the minutes are *Free minutes* or *Paid minutes*.
