add test phase to messenger page title

--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -2431,7 +2431,7 @@ Bei Bedarf auf *Neue Lieferanschrift* klicken, um eine neue Lieferanschrift anzu
 |Auf das *kleine Plus* klicken, um die xref:payment:bankdaten-verwalten.adoc#bankdaten-kunden[Bankdaten des Kunden] einzublenden und bei Bedarf zu bearbeiten.
 
 | *Kundennotizen*
-|Du wirst weitergeleitet zum Bereich xref:crm:messenger-testphase.adoc#[Messenger] des Kontaktdatensatzes. Hier kannst du entweder eine *Neue Nachricht* (material:add[]) erstellen oder bereits vorhandene Nachrichten öffnen.
+|Du wirst weitergeleitet zum Bereich *Messenger* des Kontaktdatensatzes. Hier kannst du entweder eine neue Nachricht erstellen oder bereits vorhandene Nachrichten öffnen.
 
 | *Auftragsnotiz*
 |Zeigt die zur Kund:in gespeicherten Auftragsnotizen an. Auf *Neue Notiz* klicken, um eine Auftragsnotiz anzulegen. Neue Notizen werden mit den üblichen Editor-Funktionen formatiert.
