--- a/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
@@ -214,7 +214,7 @@ Weitere Informationen findest du auf der Handbuchseite xref:crm:ticketsystem-nut
 * material:message[] *Messenger*
 
 ** Öffnet den Messenger. Mit einem Klick auf *Neue Nachricht* (material:add[]) erstellst du eine neue Nachricht für den Kontakt. +
-Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger].
+Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger (Testphase)].
 
 * material:delete[] *Kontakt löschen*
 ** xref:crm:kontakt-bearbeiten.adoc#kontakt-loeschen[Löscht] den Kontakt nach dem Bestätigen der Sicherheitsabfrage.
