--- a/docs/en-gb/modules/crm/pages/managing-contacts.adoc
+++ b/docs/en-gb/modules/crm/pages/managing-contacts.adoc
@@ -534,8 +534,7 @@ Searching for a contact:
 → The contacts that correspond to the search criteria entered are displayed.
 . Click in the line of the contact. +
 → The detail view of the contact opens. +
-icon:map-signs[] *_Or:_* Open certain areas of the context menu such as *New order* or *Messenger* with a right click. +
-→ For further information, refer to the xref:crm:messenger-testphase.adoc#[Messenger] page.
+icon:map-signs[] *_Or:_* Open certain areas of the context menu such as *New order* or *Messenger* with a right click. 
 
 [[table-filter-contacts]]
 .Filters for contacts
@@ -699,8 +698,7 @@ Editing a contact:
 → The contacts that correspond to the search criteria entered are displayed.
 . Click in the line of the contact. +
 → The detail view of the contact opens. +
-icon:map-signs[] *_Or:_* Open certain areas of the context menu such as *New order* or *Messenger* with a right click on *Actions* (icon:bars[]). +
-→ For further information, refer to the xref:crm:messenger-testphase.adoc#[Messenger] page.
+icon:map-signs[] *_Or:_* Open certain areas of the context menu such as *New order* or *Messenger* with a right click on *Actions* (icon:bars[]).
 . Carry out the desired changes. Note <<#table-edit-contact>>.
 . *Save* (icon:save[role="green"]) the settings.
 
