--- a/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
@@ -548,8 +548,7 @@ Kontakt suchen:
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Kontakts. +
 → Die Detailansicht des Kontakts wird geöffnet. +
-icon:map-signs[] *_Oder:_* Öffne bestimmte Bereiche des Kontextmenüs wie *Neuer Auftrag* oder *Messenger* mit einem Rechtsklick. +
-→ Weitere Informationen zum Messenger findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger].
+icon:map-signs[] *_Oder:_* Öffne bestimmte Bereiche des Kontextmenüs wie *Neuer Auftrag* oder *Messenger* mit einem Rechtsklick.
 
 [[table-filter-contacts]]
 .Filter für die Kontakte
@@ -713,8 +712,7 @@ Kontakt bearbeiten:
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Kontakts. +
 → Die Detailansicht des Kontakts wird geöffnet. +
-icon:map-signs[] *_Oder:_* Öffne bestimmte Bereiche des Kontextmenüs wie *Neuer Auftrag* oder *Messenger* mit einem Rechtsklick auf *Aktionen* (icon:bars[]). +
-→ Weitere Informationen zum Messenger findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger].
+icon:map-signs[] *_Oder:_* Öffne bestimmte Bereiche des Kontextmenüs wie *Neuer Auftrag* oder *Messenger* mit einem Rechtsklick auf *Aktionen* (icon:bars[]).
 . Nimm die gewünschten Änderungen vor. Beachte dazu die Erläuterungen in <<#table-edit-contact>>.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 
