--- a/docs/de-de/modules/warenwirtschaft/pages/umbuchungen-vornehmen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/umbuchungen-vornehmen.adoc
@@ -154,7 +154,7 @@ So erstellst du eine neue Nachricht:
 
 Nach Absenden der Nachricht wird diese dann automatisch mit der Umbuchungs-ID verknüpft. Die Nachricht kann nach der Bearbeitung als erledigt markiert werden.
 
-Weitere Informationen zum Messenger allgemein findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger].
+Weitere Informationen zum Messenger allgemein findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger (Testphase)].
 
 [#600]
 == Umbuchung anlegen
