--- a/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
+++ b/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
@@ -5,7 +5,7 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 04.10.22
+zuletzt bearbeitet 06.10.22
 ////
 
 //ToDo - gifs erstellen - nachdem Sets auch zur Auswahl stehen
@@ -17,29 +17,21 @@ Auf dieser Seite lernst du, Artikel und Varianten manuell zu erstellen.
 
 //#video#
 
-[discrete]
-=== [.underline]##Ablauf##
-
-[%interactive]
-* [ ] Erstelle den xref:artikel:artikel-manuell-anlegen.adoc#200[Artikeldatensatz].
-* [ ] Soll der Artikel z.B. in unterschiedlichen Größen oder Farben erhältlich sein? Dann erstelle xref:artikel:artikel-manuell-anlegen.adoc#300[alle nötigen Varianten].
-* [ ] Füge xref:artikel:artikel-manuell-anlegen.adoc#400[weitere Produktdaten] wie Bilder, Texte und Bestandsinformationen hinzu.
-* [ ] Schau dir regelmäßig eine xref:artikel:artikel-manuell-anlegen.adoc#500[Vorschau des Artikels im plentyShop] an und finde heraus, wo du noch weitere Produktdaten hinzufügen oder Einstellungen optimieren musst.
-* [ ] xref:artikel:artikel-manuell-anlegen.adoc#600[Aktiviere den Artikel], wenn er verkaufsfertig ist.
-
 [TIP]
-.Willst du Artikel lieber importieren?
+.Manuelle Erstellung vs. Import
 ====
-Diese Seite beschreibt die manuelle Erstellung von Artikeln und Varianten.
-Dies ist zum Beispiel sinnvoll, wenn du nur wenige neue Produkte zum Sortiment hinzufügen möchtest.
-Was aber, wenn du mehrere hundert Artikeldatensätze hinzufügen willst?
-Es würde ewig dauern, dies manuell zu tun.
-Wirf einen Blick auf die unterschiedlichen xref:artikel:import-export-anlage.adoc#[Tools] zum Importieren von Artikelinformationen.
-Wähle das Tool, das für deine Situation am besten geeignet ist.
+Diese Seite konzentriert sich auf die manuelle Erstellung.
+plentymarkets enthält aber auch ein xref:daten:ElasticSync.adoc#[Import-Tool], mit dem du Artikel und Varianten importieren kannst.
+Die Idee ist ganz einfach.
+Anstatt Artikeldaten manuell in plentymarkets zu speichern, trägst du die gleiche Informationen in eine CSV-Datei ein und importierst diese Datei dann in dein System.
+
+* Verwende dazu den Import-Typ *Artikel*.
+* xref:daten:praxisbeispiel-elasticsync-variantenanlage.adoc#[Praxisbeispiel: Import von Artikeln und Varianten]
+* xref:daten:elasticSync-artikel.adoc#[Verzeichnis aller Datenfelder für den Artikelimport]
 ====
 
-[#100]
-== Voraussetzungen
+[discrete]
+=== [.underline]##Voraussetzungen##
 
 Diese Seite setzt voraus, dass du bereits Grundkenntnisse über die Artikelstruktur in plentymarkets hast.
 Du sollst den xref:artikel:struktur.adoc#[Unterschied zwischen Artikeln und Varianten] kennen und du sollst wissen, wie Varianten ihre xref:artikel:vererbung.adoc#[Daten vererben].
@@ -49,7 +41,6 @@ Zudem müssen folgende Daten im System vorhanden sein, um wie hier beschrieben A
 * xref:artikel:attribute.adoc#[Attribute und Attributwerte]
 * xref:artikel:kategorien.adoc#[Kategorien]
 * xref:artikel:preise.adoc#[Verkaufspreise]
-
 
 [#200]
 == Einen neuen Artikel erstellen
@@ -63,20 +54,23 @@ Nach der Erstellung fügst du weitere Produktinformationen hinzu und aktivierst 
 Einen neuen Artikel erstellen:
 
 . Öffne das Menü *Artikel » Artikel-UI*.
-. Klicke auf icon:plus[role="darkGrey"] und wähle die Art des Artikels, den du erstellen möchtest.
-Beachte, dass diese Einstellung nicht mehr geändert werden kann, nachdem du den Artikel erstellt hast.
-* *Standard-Artikel*: Ein normaler Artikel.
-In den meisten Fällen wirst du wahrscheinlich einen Standard-Artikel erstellen.
-Diese Seite beschreibt den Vorgang.
-* <<Multipack-Artikel>>:
-Beispiel: 1 Flasche Wasser, eine Packung mit 6 Flaschen und eine Packung mit 12 Flaschen.
-//* <<Set-Artikel>>:
-//Beispiel: Eine Fußballuniform bestehend aus einem Trikot, Shorts und Socken. Endkunden stellen ihre eigenen Uniformen zusammen, indem sie die gewünschte Größe und Farbe für jede der drei Komponenten auswählen.
+. Klicke auf icon:plus[role="darkGrey"] und wähle *Standard-Artikel*.
 . Ein Pop-Up Fenster wird geöffnet. Dieses Fenster ist in mehrere Schritte unterteilt. Nimm die Einstellungen in jedem Schritt vor.
 
-'''
-[discrete]
-==== Schritt: Name
+[TIP]
+.Standard-Artikel vs. Multipack-Artikel
+//.Standard-Artikel vs. Multipack-Artikel vs. Set-Artikel
+====
+Diese Dropdown-Liste gibt an, welche Art von Artikel du erstellen möchtest.
+Hier wird die Erstellung von Standard-Artikeln, d.h. ganz normalen Artikeln und Varianten beschrieben.
+Ausführlichere Informationen zu den verschiedenen Typen findest du im xref:artikel:artikel-manuell-anlegen.adoc#700[FAQ-Bereich].
+
+*_Hinweis_*: Diese Einstellung kann nicht mehr geändert werden, nachdem du den Artikel erstellt hast.
+====
+
+[.collapseBox]
+.*Schritt: Name*
+--
 
 :manual:
 
@@ -93,9 +87,11 @@ Nachdem du den Artikel erstellt hast, kannst du den Namen in weitere Sprachen ü
 
 |===
 
-'''
-[discrete]
-==== Schritt: Kategorien
+--
+
+[.collapseBox]
+.*Schritt: Kategorien*
+--
 
 [cols="1,4"]
 |===
@@ -116,9 +112,11 @@ Klicke auf material:delete[role="darkGrey"], um eine Kategorie aus dieser Liste 
 
 |===
 
-'''
-[discrete]
-==== Schritt: Hauptvariante (Optional)
+--
+
+[.collapseBox]
+.*Schritt: Hauptvariante (Optional)*
+--
 
 Die erste Variante eines Artikels wird als Hauptvariante bezeichnet.
 Hat ein Artikel mehrere Varianten, kann die Hauptvariante entweder selbst ein verkaufbares Produkt sein oder rein virtuell bestehen, um die weiteren Untervarianten des Artikels anhand von Vererbung zu verwalten.
@@ -153,9 +151,11 @@ Warum? Verknüpfst du Attribute bereits jetzt mit der Hauptvariante, müssen all
 Im Nachhinein bist du also flexibler.
 |===
 
-'''
-[discrete]
-==== Schritt: Fertig
+--
+
+[.collapseBox]
+.*Schritt: Fertig*
+--
 
 [cols="1s,4"]
 |===
@@ -183,6 +183,8 @@ Nach der Erstellung hast du folgende Möglichkeiten:
 
 |===
 
+--
+
 [#300]
 == Benötigte Varianten erstellen
 
@@ -199,9 +201,9 @@ Benötigte Varianten erstellen:
 . Klicke auf *Varianten erstellen* (icon:plus[role="darkGrey"]).
 . Ein Pop-Up Fenster wird geöffnet. Dieses Fenster ist in mehrere Schritte unterteilt. Nimm die Einstellungen in jedem Schritt vor.
 
-'''
-[discrete]
-==== Schritt: Einstellungen
+[.collapseBox]
+.*Schritt: Einstellungen*
+--
 
 [cols="1s,4"]
 |===
@@ -239,9 +241,11 @@ Klicke auf icon:pencil[role="darkGrey"] *Attribute auswählen*, wenn du deine Au
 
 |===
 
-'''
-[discrete]
-==== Schritt: Vorschau
+--
+
+[.collapseBox]
+.*Schritt: Vorschau*
+--
 
 [cols="1s,4"]
 |===
@@ -256,9 +260,11 @@ Klicke auf icon:pencil[role="darkGrey"] *Attribute auswählen*, wenn du deine Au
 Es gibt keine Begrenzung, wie viele Kombinationen möglich sind.
 |===
 
-'''
-[discrete]
-==== Schritt: Zusammenfassung
+--
+
+[.collapseBox]
+.*Schritt: Zusammenfassung*
+--
 
 [cols="1s,4"]
 |===
@@ -271,6 +277,8 @@ Es gibt keine Begrenzung, wie viele Kombinationen möglich sind.
 Es kann einige Minuten dauern, bis die neuen Varianten in der Übersicht erscheinen.
 
 |===
+
+--
 
 [#400]
 == Weitere Produktdaten hinzufügen
@@ -410,3 +418,29 @@ Sonst werden Kunden den Artikel nicht kaufen können.
 Arbeite xref:artikel:checkliste-artikel-anzeige.adoc#[diese Checkliste] durch und vergewissere dich, dass dein Artikel alle Voraussetzungen erfüllt, um im plentyShop sichtbar zu sein.
 Diese Checkliste hilft dir, mögliche Fehlerquellen bei der Artikelsichtbarkeit ausfindig zu machen.
 ====
+
+[#700]
+== Fragen und Antworten
+
+[.collapseBox]
+.*Standard-Artikel vs. Multipack-Artikel*
+//.*Standard-Artikel vs. Multipack-Artikel vs. Set-Artikel*
+--
+
+* *Standard-Artikel*: Dieser Typ eignet sich für:
+** Normale Artikel und Varianten.
+Beispiel: Ein T-Shirt, das in den Farben Rot, Blau und Grün erhältlich ist.
+xref:artikel:artikel-manuell-anlegen.adoc#200[Weitere Informationen zur Erstellung].
+** Pakete.
+Beispiel: Ein Bartpflege-Kit bestehend aus einer Schere, einer Bürste, Bartöl und Bartwachs.
+xref:artikel:multipack-paket-set.adoc#200[Weitere Informationen zur Erstellung].
+* *Multipack-Artikel*: Dieser Typ eignet sich für Multipacks.
+Beispiel: 1 Flasche Wasser, eine Packung mit 6 Flaschen und eine Packung mit 12 Flaschen.
+xref:artikel:multipack-paket-set.adoc#100[Weitere Informationen zur Erstellung].
+//* *Set-Artikel*: Dieser Typ eignet sich für Sets.
+//Beispiel: Eine Fußballuniform bestehend aus einem Trikot, Shorts und Socken. Endkunden stellen ihre eigenen Uniformen zusammen, indem sie die gewünschte Größe und Farbe für jede der drei Komponenten auswählen.
+//xref:artikel:multipack-paket-set.adoc#300[Weitere Informationen zur Erstellung].
+
+*_Hinweis_*: Diese Einstellung kann nicht mehr geändert werden, nachdem du den Artikel erstellt hast.
+
+--
