Gretchen/standard multipack (#1220)
* ADD first work to the multipack page for the new item ui

* ADD more work to the multipack info for the new ui

* ADD more work to the new ui multipack page

* ADD more work to the documentation of the new multipack stepper

--- a/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
+++ b/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
@@ -28,6 +28,9 @@ a| *_Beispiel_*: 1 Flasche Wasser, eine Packung mit 6 Flaschen und eine Packung 
 * Die Hauptvariante entspricht der kleinsten Verkaufseinheit des Produkts, z.B. 1 Flasche.
 * Alle weiteren Varianten sind Kombinationen dieser kleinsten Verkaufseinheit, z.B. 6 oder 12 Flaschen.
 * Bestand wird nur an der Hauptvariante verwaltet.
+* Alle Varianten haben dieselben Attribute.
+Endkunden können also nicht z.B. zwischen verschiedenen Farben oder Größen wählen.
+Sie können nur zwischen den verschiedenen Stückzahlen wählen.
 |Multipack
 
 |
@@ -46,7 +49,7 @@ Zum Beispiel können sie das Bartpflege-Kit nicht ohne das Bartwachs kaufen.
 * Es ist möglich, Varianten mit unterschiedlichen Steuersätzen zusammen in einem Paket anzubieten.
 * Alle Bestandteile müssen auf dem selben Lager liegen.
 * Der Warenbestand des Pakets richtet sich nach dem Bestandteil mit dem geringsten Bestand.
-Am Paketartikel selbst pflegst du keinen Bestand.
+Am Paket selbst pflegst du keinen Bestand.
 |Standard
 
 |
