--- a/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
@@ -63,7 +63,7 @@ Wenn noch andere Händler:innen das gleiche Produkt anbieten, passt die Tiefprei
 | ja
 a| Der Bestand der Variante.
 
-* *Bestand »* [1 oder mehrere Lager wählen]
+* *Bestand » Virtuelles Gesamtlager » Netto Bestand*
 
 *_Tipp:_* Mit den Datenfeldern unter *Virtuelles Gesamtlager* wird die Summe der Bestände aller Vertriebslager exportiert.
 
