--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -5,6 +5,14 @@
 
 Im Menü *CRM » Messenger (Testphase)* verwaltest du sowohl die externe Kommunikation mit deinen Kund:innen in Form von E-Mails als auch die interne Kommunikation in Form von Nachrichten. Wenn du Nachrichten flüsterst, sind diese Nachrichten nur in deinem plentymarkets System sichtbar und können von deinen Kontakten _nicht_ eingesehen werden. 
 
+[#box-assistent-durchlaufen]
+[IMPORTANT]
+.Assistent muss nur für E-Mail-Versand und E-Mail-Empfang über Messenger durchlaufen werden
+====
+Wenn du den Messenger für den E-Mail-Versand und E-Mail-Empfang verwenden möchtest, musst du den <<#assistent-durchlaufen, Assistenten>> *Messenger-Konfiguration* im Menü *Einrichtung » Assistenten » Grundeinrichtung* durchlaufen. +
+Wenn du Nachrichten nur flüstern möchtest, du den Messenger also nur als Notizfunktion verwenden möchtest, ohne E-Mails über den Messenger zu versenden und zu empfangen, musst du den Assistenten *Messenger-Konfiguration* _nicht_ durchlaufen.
+====
+
 Das Menü *CRM » Messenger (Testphase)* ist wie folgt aufgebaut:
 
 image::crm:messenger-menu-structure.png[width=640, height=360]
