--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -5,6 +5,14 @@
 
 The *CRM » Messenger (Test phase)* menu allows you to manage the external communication with your customers via emails as well as the internal communication via messages. If you use the whisper mode in messages, these messages are only visible in your plentymarkets system and _cannot_ be seen by your contacts.
 
+[#box-complete-assistant]
+[IMPORTANT]
+.Complete assistant only for sending and receiving emails via messenger
+====
+If you want to use the messenger for sending and receiving emails, you have to complete the *Messenger configuration* <<#complete-assistant, assistant>> in the *Setup » Assistants » Basic setup*. +
+If you only want to whisper messages which means that you use the messenger as notes only without sending and receiving emails via the messenger, you do _not_ have to complete the *Messenger configuration* assistant. 
+====
+
 The *CRM » Messenger (Test phase)* menu is structured as follows:
 
 image::crm:messenger-menu-structure.png[width=640, height=360]
