add box to assistant chapter on messenger page

--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -90,6 +90,13 @@ include::_includes:page$tags-search.adoc[]
 [#assistent-durchlaufen]
 === Assistent durchlaufen
 
+[IMPORTANT]
+.Assistent muss nur für E-Mail-Versand und E-Mail-Empfang über Messenger durchlaufen werden
+====
+Wenn du den Messenger für den E-Mail-Versand und E-Mail-Empfang verwenden möchtest, musst du den <<#assistent-durchlaufen, Assistenten>> *Messenger-Konfiguration* im Menü *Einrichtung » Assistenten » Grundeinrichtung* durchlaufen. +
+Wenn du Nachrichten nur flüstern möchtest, du den Messenger also nur als Notizfunktion verwenden möchtest, ohne E-Mails über den Messenger zu versenden und zu empfangen, musst du den Assistenten *Messenger-Konfiguration* _nicht_ durchlaufen.
+====
+
 Um mit dem Messenger Nachrichten senden und empfangen zu können, musst du den Assistenten *Messenger-Konfiguration* im Menü *Einrichtung » Assistenten » Grundeinrichtung* durchlaufen. Im Folgenden werden die einzelnen Schritte, die du in diesem Assistenten durchläufst, beschrieben.
 
 [TIP]
