--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -88,6 +88,13 @@ include::_includes:page$tags-search.adoc[]
 [#complete-assistant]
 === Completing the assistant
 
+[IMPORTANT]
+.Complete assistant only for sending and receiving emails via messenger
+====
+If you want to use the messenger for sending and receiving emails, you have to complete the *Messenger configuration* <<#complete-assistant, assistant>> in the *Setup » Assistants » Basic setup*. +
+If you only want to whisper messages which means that you use the messenger as notes only without sending and receiving emails via the messenger, you do _not_ have to complete the *Messenger configuration* assistant. 
+====
+
 To be able to send and receive messages with the Messenger, you have to complete the *Messenger configuration* assistant in the *Setup » Assistants » Basic setup* menu. This assistant has several steps to complete. These steps are explained in the following.
 
 [TIP]
