--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -206,7 +206,7 @@ Wenn du den Dienst zum Sammeln der E-Mails aktivierst, werden die E-Mails aus de
 * Aufträge » Aufträge (Testphase)
 * Gruppenfunktion im Auftrag
 
-Den Assistenten *E-Mail-Konten* findest du ebenfalls im Menü *Einrichtung » Assistenten » Grundeinrichtung*. Weitere Informationen zum Sammeln der E-Mails findest du auf der Seite xref:crm:emailbuilder.adoc#[EmailBuilder (Testphase)] im Kapitel xref:crm:emailbuilder.adoc#e-mail-messenger-integration[Messenger-Migration].
+Den Assistenten *E-Mail-Konten* findest du ebenfalls im Menü *Einrichtung » Assistenten » Grundeinrichtung*. Weitere Informationen zum Sammeln der E-Mails findest du auf der Seite xref:crm:emailbuilder.adoc#[EmailBuilder (Testphase)] im Kapitel xref:crm:emailbuilder.adoc#e-mail-messenger-integration[Messenger-Integration].
 
 [#nachricht-erstellen]
 == Neue Nachricht erstellen
