--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -220,8 +220,8 @@ Nachricht erstellen:
 . Klicke oben links auf material:add[] *Neue Nachricht*.
 . Gib im Feld *Empfänger hinzufügen...* einen Wert ein und wähle dann den passenden Wert aus der Vorschlagsliste. +
 *_Beispiel:_* Wenn du eine Zahl eingibst, werden dir mögliche Empfänger:innen mit dieser Auftrags-ID oder Kontakt-ID vorgeschlagen (siehe <<#image-messenger-new-message-suggestion-list>>).
-. Wähle eine Vorlage aus der Liste.
-. Wähle die Vorlagensprache.
+// . Wähle eine Vorlage aus der Liste.
+// . Wähle die Vorlagensprache.
 . Gib den Betreff deiner Nachricht im Feld *Betreff* ein.
 . Wähle den Posteingang aus der Dropdown-Liste.
 . Gib im Textfeld die Nachricht ein.
@@ -243,16 +243,16 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 |[#intable-recipients]*Empfänger:innen*
 |Gib hier einen Namen oder eine ID ein und wähle dann den passenden Wert aus der Vorschlagsliste (siehe <<#image-messenger-new-message-suggestion-list>>).
 
-|[#intable-template]*Vorlage*
-|Wähle eine Vorlage aus der Liste. Du siehst in der Liste alle Vorlagen, die du im xref:crm:emailbuilder.adoc#[EmailBuilder] erstellt hast. +
+// |[#intable-template]*Vorlage*
+// |Wähle eine Vorlage aus der Liste. Du siehst in der Liste alle Vorlagen, die du im xref:crm:emailbuilder.adoc#[EmailBuilder] erstellt hast. +
 *_Tipp:_* Gib mindestens 3 Buchstaben ein, damit dir eine Vorschlagsliste der bereits vorhandenen E-Mail-Vorlagen angezeigt wird. +
 *_Hinweis:_* Wenn du auf <<#intable-refresh-template, Vorlage laden>> klickst, wird der Inhalt der Vorlage und der in der Vorlage gespeicherte Betreff angezeigt.
 
-|[#intable-template-language]*Vorlagensprache*
-|Wähle die Vorlagensprache.
+// |[#intable-template-language]*Vorlagensprache*
+// |Wähle die Vorlagensprache.
 
-|[#intable-refresh-template]*Vorlage laden*
-|Mit einem Klick auf material:refresh[] lädst du den Inhalt der Vorlage neu. Zum Beispiel wird der Inhalt der gewählten Vorlage sowie der Betreff angezeigt.
+// |[#intable-refresh-template]*Vorlage laden*
+// |Mit einem Klick auf material:refresh[] lädst du den Inhalt der Vorlage neu. Zum Beispiel wird der Inhalt der gewählten Vorlage sowie der Betreff angezeigt.
 
 |[#intable-inbox]*Posteingang*
 |Wähle einen Posteingang aus der Dropdown-Liste. In der Liste werden die Namen der Posteingänge angezeigt, für die du jeweils den <<#assistent-durchlaufen, Assistenten durchlaufen>> hast.
@@ -508,7 +508,9 @@ Die xref:payment:beta-zahlungen-verwalten-neu.adoc#[Zahlung] hat eine direkte Ve
 [#auf-nachricht-antworten]
 == Auf eine bestehende Nachricht antworten
 
-Suche die <<#konversation-suchen, Konversation>>, die die Nachricht enthält, auf die du antworten möchtest. Klicke dann auf die Nachricht, um darauf zu antworten. Beim Antworten auf eine bestehende Nachricht siehst du alle Empfänger:innen, die diese Nachricht erhalten. Du kannst weitere Empfänger:innen hinzufügen. Falls gewünscht, wähle aus der Dropdown-Liste *Vorlage* eine Vorlage und eine Vorlagensprache.
+Suche die <<#konversation-suchen, Konversation>>, die die Nachricht enthält, auf die du antworten möchtest. Klicke dann auf die Nachricht, um darauf zu antworten. Beim Antworten auf eine bestehende Nachricht siehst du alle Empfänger:innen, die diese Nachricht erhalten. Du kannst weitere Empfänger:innen hinzufügen.
+
+// Falls gewünscht, wähle aus der Dropdown-Liste *Vorlage* eine Vorlage und eine Vorlagensprache.
 
 Der einzige Unterschied zum <<#nachricht-erstellen, Erstellen einer Nachricht>> ist, dass du beim Antworten auf eine bestehende Nachricht über das Symbol material:more_vert[] den Betreff ein- und ausblenden kannst (siehe <<#image-messenger-reply-to-message>>). 
 
