--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -245,8 +245,8 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 
 // |[#intable-template]*Vorlage*
 // |Wähle eine Vorlage aus der Liste. Du siehst in der Liste alle Vorlagen, die du im xref:crm:emailbuilder.adoc#[EmailBuilder] erstellt hast. +
-*_Tipp:_* Gib mindestens 3 Buchstaben ein, damit dir eine Vorschlagsliste der bereits vorhandenen E-Mail-Vorlagen angezeigt wird. +
-*_Hinweis:_* Wenn du auf <<#intable-refresh-template, Vorlage laden>> klickst, wird der Inhalt der Vorlage und der in der Vorlage gespeicherte Betreff angezeigt.
+// *_Tipp:_* Gib mindestens 3 Buchstaben ein, damit dir eine Vorschlagsliste der bereits vorhandenen E-Mail-Vorlagen angezeigt wird. +
+// *_Hinweis:_* Wenn du auf <<#intable-refresh-template, Vorlage laden>> klickst, wird der Inhalt der Vorlage und der in der Vorlage gespeicherte Betreff angezeigt.
 
 // |[#intable-template-language]*Vorlagensprache*
 // |Wähle die Vorlagensprache.
