WooCommerce EN - initial commit

--- a/docs/en-gb/modules/external-online-shops/pages/woocommerce.adoc
+++ b/docs/en-gb/modules/external-online-shops/pages/woocommerce.adoc
@@ -105,7 +105,7 @@ Germanized extends WooCommerce to technically match specific german legal requir
 [.instruction]
 Setting up Germanized Readiness:
 
-. Use the installation guide on link:https://wordpress.org/plugins/woocommerce-germanized/[WooCommerce] to install and set up the *Germanized* plugin.
+. Use the installation guide on ink:https://wordpress.org/plugins/woocommerce-germanized/[WooCommerce] to install and set up the *Germanized* plugin.
 . In plentymarkets, go to *Setup » Markets » WooCommerce » Settings » Section: Data Exchange*.
 . Activate the option *Export data to 'Germanized plugin' specific input fields*.
 . Save the setting.
@@ -560,8 +560,8 @@ The xref:automation:event-procedures.adoc[event procedures] provided by the plug
 === Example: Setting up the event procedure "Send fulfilment notification"
 
 . Go to *Setup » Orders » Events*.
-. Click on *[ + ] Add*. +
-→ The window *Create new event procedure* opens.
+. Click on *[ \+ ] Add*. +
+→ The window Create new event procedure opens.
 . Enter a *name*.
 . For example, select the event *Order change » Outgoing items booked*.
 . Save the settings.
