--- a/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
@@ -75,7 +75,7 @@ Live-Download starten:
 
 Du willst den Live-Download anhalten? Kein Problem:
 
-* Klicke im Tab *Datenexport* in der blauen Leiste ganz rechts auf *Export abbrechen* (material:highlight_off[]). +
+* Klicke im Tab *Datenexport* ganz rechts oben auf *Export abbrechen* (material:highlight_off[]). +
 → Der Download wird angehalten. +
 *_Wichtig:_* Der Download kann nicht fortgesetzt werden. Starte bei Bedarf einen neuen Download.
 ======
