--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -128,7 +128,7 @@ Je nach gewählter Option werden weitere Einstellungen eingeblendet.
 * *Benutzername (Pflichtfeld)* = Benutzer:in für FTP-Zugang eingeben.
 * *Passwort (Pflichtfeld)* = Passwort für FTP-Zugang eingeben.
 * *Dateiname* = Pfad und Name der Datei eingeben, aus der Daten importiert werden sollen. Der Dateiname muss auf .csv oder .txt enden. +
-  *_Hinweis:_* Im Feld *Dateiname* können Wildcards verwendet werden. Ersetze zum Beispiel einen Teil des Dateinamens durch ein Sternchen (*).
+  *_Hinweis:_* Im Feld *Dateiname* können Wildcards verwendet werden. Ersetze zum Beispiel einen Teil des Dateinamens durch ein Sternchen (&lowast;).
 Verwende Wildcards aber nur in Kombination mit der Option *Datei nach erfolgreichem Import in Archiv verschieben*.
 * *Datei nach erfolgreichem Import in Archiv verschieben* = Wenn diese Option aktiv ist, wird die Importdatei nach dem Import automatisch in einen neuen Ordner *Archiv* auf dem FTP-Verzeichnis verschoben.
 
@@ -150,7 +150,7 @@ Verwende Wildcards aber nur in Kombination mit der Option *Datei nach erfolgreic
 * *Benutzername* (Pflichtfeld) = Benutzer:in für FTP-Zugang eingeben.
 * *Passwort* (Pflichtfeld) = Passwort für FTP-Zugang eingeben.
 * *Dateiname* = Pfad und Name der Datei eingeben, aus der Daten importiert werden sollen. Der Dateiname muss auf .csv oder .txt enden. +
-  *_Hinweis:_* Im Feld *Dateiname* können Wildcards verwendet werden. Ersetze zum Beispiel einen Teil des Dateinamens durch ein Sternchen (*).
+  *_Hinweis:_* Im Feld *Dateiname* können Wildcards verwendet werden. Ersetze zum Beispiel einen Teil des Dateinamens durch ein Sternchen (&lowast;).
 Verwende Wildcards aber nur in Kombination mit der Option *Datei nach erfolgreichem Import in Archiv verschieben*.
 * *Datei nach erfolgreichem Import in Archiv verschieben* = Wenn diese Option aktiv ist, wird die Importdatei nach dem Import automatisch in einen neuen Ordner *Archiv* auf dem FTP-Verzeichnis verschoben.
 
